--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -105,7 +105,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
-<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="http://wshen01.github.io/code/Arena code1.exp">code1</a>],[<a href="http://wshen01.github.io/code/Arena code2.exp">code2</a>]</p></li>
+<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="http://wshen01.github.io/code/Arena code1.exp">code1</a>][<a href="http://wshen01.github.io/code/Arena code2.exp">code2</a>]</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
