--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Performed regression analysis on popularity and predicted genre</p>
 </li>
 </ul>
-<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code1.exp">code1</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code2.exp">code2</a>]</p></li>
+<li><p>Simulation and Modeling: <b>Design and Evaluation of a New Workflow for Customer Money-laundering Risk Ranking</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Money-Laundering.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code1.exp">model1</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code2.exp">model2</a>]</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
