--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
-<li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p></li>
+<li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Patient-Diagnosis.twb">code</a>]</p></li>
 <ul>
 <li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
 </li>
