--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I will obtain my third master’s degree at the International University of Japan, following the first one at the Finance Department at Zhejiang Univeristy of Finance and Economics in China and the second one at the Math Department in College of William and Mary in the U.S. <br />
+<p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
 I am currently a research intern at Asian Development Bank Institute in Japan. <br />
 I used to serve as a regional director at Huaxia Bank in charge of Anti Money Laundering & Countering Terrorism Financing. <br />
 Being skilled at statistical techniques and data analytics, I focus on international comparison of economic crisis, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
