--- a/index.html
+++ b/index.html
@@ -75,11 +75,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ol>
 <h3>Papers & Publications </h3>
 <ol>
-<li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
 </li>
-<li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">pdf</a>]</p>
-</li>
-<li><p>D. Chen, W. Hong, and <b>X. Zhou</b>*, "Transformer Network for Remaining Useful Life Prediction of Lithium-Ion Batteries", <i>IEEE Access</i>, 2022, 10, pp. 19621-19628. (IF = 3.367) [<a href="pub/Transformer.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
+<li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/RUL">code</a>]</p>
 </li>
 </ol>
 <h3>Academic Awards</h3>
