--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <h1>Shen, Wenying (沈文颖) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://wshen01.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<a href="https://wshen01.github.io/"><img src="photos/bio2.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Research Assistant, </b> <br />
 Research Department, Asian Development Bank Institute (ADBI) <br />
 Minamiuonuma（Remote）, Japan <br /> 
@@ -77,7 +77,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
 </li>
-<li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">Abstract</a>][<a href="https://github.com/XiuzeZhou/RUL">lab results</a>]</p>
+<li><p>Graduate Degree Thesis. <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">Abstract</a>][<a href="pub/lab results.pdf">lab results</a>]</p>
 </li>
 </ol>
 <h3>Academic Awards</h3>
