--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
-I am currently a research intern at <b>Asian Development Bank Institute</b> in Japan. <br />
-I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
+I am currently a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
 Being skilled at statistical techniques and data analytics, I focus on international comparison of <b>economic crisis</b>, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
