--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <td align="left"><p><b>Research Assistant, </b> <br />
 Research Department, Asian Development Bank Institute (ADBI) <br />
 Minamiuonuma（Remote）, Japan <br /> 
-<b>Regional Directorate on AML </b> <br />
+<b>Regional Directorate </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
 Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
