--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h2>Work experience</h2>
 <ol>
-<li><p>Research Scientist, AI Research Institute, Hithink RoyalFlush, 06.2019-Present</p></li>
+<li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Aug.2023-Present</p></li>
 <ul>
 <li><p>Research the newest machine learning algorithms and recommender system technology on stocks and hot news</p>
 </li>
@@ -159,16 +159,14 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Give lessons on Artificial Intelligence and Recommender Systems to the staff</p>
 </li>
 </ul>
-<li><p>Research Assistant, Big Data Lab, Xiamen University, 09.2016-02.2019</p></li>
+<li><p>Teaching Assistant (part-time), Math department, College of William and Mary, Aug.2019-Jun.2021</p></li>
 <ul>
-<li><p>Instructed two undergraduate and three graduate students in scientific research</p>
+<li><p>Graded homework and quiz for undergraduate courses, e.g. ordinary differential equation</p>
 </li>
-<li><p>Tracked, studied, reproduced, and improved up-to-date machine learning methods</p>
-</li>
-<li><p>Published papers on machine learning and recommender systems</p>
+<li><p>Provide individual remote tutoring for undergraduate students with Calculus in Zoom on weekends</p>
 </li>
 </ul>
-<li><p>Software Engineer, Dragon SOFT, 07.2013-06.2014</p></li>
+<li><p>Regional Directorate (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2015-Jan.2019</p></li>
 <ul>
 <li><p>Developed an electronic target practice system for security guards’ shooting training</p>
 </li>
@@ -177,7 +175,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Built a model analyzing users&rsquo; shooting behavior concerning speed, acceleration and number of cylinders</p>
 </li>
 </ul>
-<li><p>Assistant Engineer, Gold Electronic, 03.2012-07.2012</p></li>
+<li><p>Risk Management Specialist (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2012-Dec.2015</p></li>
 <ul>
 <li><p>Cooperated with motor companies, such as Zotye and BYD, on battery management system development</p>
 </li>
