--- a/index.html
+++ b/index.html
@@ -168,20 +168,24 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <li><p>Regional Directorate (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2015-Jan.2019</p></li>
 <ul>
-<li><p>Developed an electronic target practice system for security guards’ shooting training</p>
+<li><p>Prepared applicable documents and reports required for both internal audit and external regulation in terms of anti-money laundry management</p>
 </li>
-<li><p>Recorded the track of users' shooting behavior from sensors in a database</p>
+<li><p>Monitored the performance of Anti-money Laundering Database, manage database configuration, and control database access permissions and privileges</p>
 </li>
-<li><p>Built a model analyzing users&rsquo; shooting behavior concerning speed, acceleration and number of cylinders</p>
+<li><p>Improved the anti-money laundry system, set the criteria via queries to automatically detect redundancy transactions and the transactions incorrectly labeled as suspicious</p>
+</li>
+<li><p>Conducted investigation into possible suspicious transactions and provided corresponding warnings to sub-branches</p>
 </li>
 </ul>
 <li><p>Risk Management Specialist (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2012-Dec.2015</p></li>
 <ul>
-<li><p>Cooperated with motor companies, such as Zotye and BYD, on battery management system development</p>
+<li><p>Helped design a visualization system to record and interpret operational risk indicators, e.g. Risk and Control Self-Assessment, Key Risk Indicator, and Loss Data Collection</p>
 </li>
-<li><p>Developed a testing and analytics platform for performance of a lithium battery with C# (real-time data)</p>
+<li><p>Produced automated-reports that include data extract, manipulation, and chart generation within the Business Continuity and Disaster Recovery System</p>
 </li>
-<li><p>Used CAN bus to collect working data of batteries and analyzed the data for balance power</p>
+<li><p>Offered periodic guidance on disaster avoidance measures, backup capabilities, and backup rotation and off-site storage procedures</p>
+</li>
+<li><p>Assisted in establishing Business Continuity and Disaster Recovery testing methodologies, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
 </li>
 </ul>
 </ol>
