--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
+<li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Oct.2020-Nov.2020. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">model1</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code2.exp">model2</a>]</p></li>
+<ul>
+<li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
+</li>
+<li><p>Evaluated and compared two types of money-laundering risk ranking workflows by constructing discrete-event simulation model with boundary constraints</p>
+</li>
+<li><p>Perform sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
+</li>
+<li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
+</li>  
+</ul>
 <li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Patient-Diagnosis.twb">code</a>]</p></li>
 <ul>
 <li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
