--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Course Projects</h2>
 <ol>
-<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Spotify Data Analytics.ipynb">code</a>]</p></li>
+<li><p>Data Mining: <b>Predicting popularity of songs based on Spotify's Web API</b>, participated as a group member, Mar.2021-Apr.2021. [<a href="pub/Spotify Data Analytics.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Spotify Data Analytics.ipynb">Python code</a>]</p></li>
 <ul>
 <li><p>Used a Spotify dataset to analyze popularity scores of tracks based on audio features</p>
 </li>
@@ -113,7 +113,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
-<li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Mar.2021-May.2021. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">model1</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Arena code2.exp">model2</a>]</p></li>
+<li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Mar.2021-May.2021. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">Python code</a>]</p></li>
 <ul>
 <li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
 </li>
@@ -124,7 +124,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
-<li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Patient-Diagnosis.twb">code</a>]</p></li>
+<li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Patient-Diagnosis.twb">Tableau code</a>]</p></li>
 <ul>
 <li><p>Preprocessed data in R and created the Entity Relationship Diagram and Relational Schema</p>
 </li>
