--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <a href="https://wshen01.github.io/"><img src="photos/bio2.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Research Assistant </b> <br />
 Research Department, Asian Development Bank Institute (ADBI) <br />
-Minamiuonuma（Remote）, Japan <br /> 
+Minamiuonuma（Remote), Japan <br /> 
 <b>Regional Directorate </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
 Zhejiang, China<br />
