--- a/index.html
+++ b/index.html
@@ -115,14 +115,10 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Mar.2021-May.2021. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">Python code</a>]</p></li>
 <ul>
-<li><p>Obtained the best fit of the service times and inter-arrival times: Weibull distribution</p>
+<li><p>Constructed a constrained optimization problem based on the general form of a non-linear constrained optimization problem</p>
 </li>
-<li><p>Evaluated and compared two types of money-laundering risk ranking workflows by constructing discrete-event simulation model with boundary constraints</p>
+<li><p>Developed an algorithm with a penalty function in seeking optimized solution</p>
 </li>
-<li><p>Perform sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
-</li>
-<li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
-</li>  
 </ul>
 <li><p>Database Management: <b>Patient-Diagnosis Analysis for Improvement of Treatment Quality</b>, participated as a group member, Nov.2020-Dec.2020. [<a href="pub/Patient-Diagnosis.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Patient-Diagnosis.twb">Tableau code</a>]</p></li>
 <ul>
