--- a/index.html
+++ b/index.html
@@ -157,13 +157,15 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Aug.2023-Present</p></li>
 <ul>
-<li><p>Research the newest machine learning algorithms and recommender system technology on stocks and hot news</p>
+<li><p>Preprocessed the survey result dataset, checking the validity of data</p>
 </li>
-<li><p>Apply neural network models to drug-target interaction prediction and evaluate the performance</p>
+<li><p>Created a new variable, income quartile, and produced charts using it to relate income with other variables</p>
 </li>
-<li><p>Publish papers and apply for relevant patents for the corporation</p>
+<li><p>Converted categorical variables into dummy ones, which was prepared for regression analysis</p>
 </li>
-<li><p>Give lessons on Artificial Intelligence and Recommender Systems to the staff</p>
+<li><p>Did a correlation table for the independent variable to check and avoid multicollinearity issues</p>
+</li>
+<li><p>Estimated several regressions, interpreting linear regression outputs</p>
 </li>
 </ul>
 <li><p>Teaching Assistant (part-time), Math department, College of William and Mary, Aug.2019-Jun.2021</p></li>
