--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Mar.2021-May.2021. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">Python code</a>]</p></li>
 <ul>
-<li><p>Constructed a constrained optimization problem based on the general form of a non-linear constrained optimization problem</p>
+<li><p>Constructed a constrained optimization problem based on the general form of a non-linear constrained one</p>
 </li>
 <li><p>Developed an algorithm with a penalty function in seeking optimized solution</p>
 </li>
