--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>Shen, Wenying (沈文颖) </title>
+<title>Shen, Wenying (沈文穎) </title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -22,7 +22,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Shen, Wenying (沈文颖) </h1>
+<h1>Shen, Wenying (沈文穎) </h1>
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://wshen01.github.io/"><img src="photos/bio2.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
