--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
-<div class="menu-item"><a href="https://www.researchgate.net/profile/Xiuze-Zhou">ResearchGate</a></div>
 <div class="menu-item"><a href="https://github.com/wshen01">GitHub</a></div>
+<div class="menu-item"><a href="https://www.kaggle.com/witenieshen">Kaggle</a></div>
 <div class="menu-item"><a href="https://medium.com/@wenying_57920">Medium</a></div>
+<div class="menu-item"><a href="https://www.researchgate.net/profile/Xiuze-Zhou">ResearchGate</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
