--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <div class="menu-item"><a href="https://github.com/wshen01">GitHub</a></div>
 <div class="menu-item"><a href="https://www.kaggle.com/witenieshen">Kaggle</a></div>
 <div class="menu-item"><a href="https://medium.com/@wenying_57920">Medium</a></div>
-<div class="menu-item"><a href="https://www.researchgate.net/profile/Xiuze-Zhou">ResearchGate</a></div>
+<div class="menu-item"><a href="https://matters.town/">Matters</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
