--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
 </li>
-<li><p>Graduate Degree Thesis: <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">Abstract</a>][<a href="pub/Lab results.pdf">lab results</a>]</p>
+<li><p>Graduate Degree Thesis: <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">Abstract</a>][<a href="pub/Lab results.pdf">Lab results</a>]</p>
 </li>
 </ol>
 <h3>Academic Awards</h3>
