--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ co<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 <div class="menu-item"><a href="https://www.kaggle.com/witenieshen">Kaggle</a></div>
 <div class="menu-item"><a href="https://medium.com/@wenying_57920">Medium</a></div>
 <div class="menu-item"><a href="https://matters.town/">Matters</a></div>
+<div class="menu-item"><a href="https://www.linkedin.com/in/witenie-shen-224585271/">Linkedin</a></div> 
 </td>
 <td id="layout-content">
 <div id="toptitle">
