--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Novice: Adobe Photoshop, Tableau, Stata.</p>
 </li>
-<li><p>Proficient: English; Native: Chinese; Elementary: Japanese.</p>
+<li><p>Proficient: English; Native: Chinese (Traditional and Simplified); Elementary: Japanese.</p>
 </ol>
 <h3>Papers & Publications </h3>
 <ol>
