--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Did a correlation table for the independent variable to check and avoid multicollinearity issues</p>
 </li>
-<li><p>Estimated several regressions, interpreted linear regression outputs and identified positive and negative drivers of fintech use</p>
+<li><p>Estimated regressions, interpreted linear regression outputs and identified positive and negative drivers of fintech use</p>
 </li>
 </ul>
 <li><p>Teaching Assistant (part-time), Math department, College of William and Mary, Aug.2019-Jun.2021</p></li>
