--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Offered periodic guidance on disaster avoidance measures, backup capabilities, and backup rotation and off-site storage procedures</p>
 </li>
-<li><p>Assisted in establishing Business Continuity and Disaster Recovery testing methodologies, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
+<li><p>Assisted in establishing Business Continuity and Disaster Recovery testing frameworks, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
 </li>
 </ul>
 </ol>
