--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Main Courses: Probability, Mathematical Statistics, Linear Programming, Integer Programming, Nonlinear Optimization, Simulation and Modeling, Database Management, Data Mining, Reliability.</p>
 </li>
 </ul>
-<p>Master of Science degree in Finance, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Mar.2012</p>
+<p>Master of Science degree in Finance, Bachelor of Science degree in Economics, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Mar.2012</p>
 <ul>
-<li><p>Main Courses: Intermediate Microeconomics, Intermediate Macroeconomics, Financial Econometrics, Advanced International Finance, Financial Market, Corporate Finance, International Bank Management.</p>
+<li><p>Main Courses: Intermediate Microeconomics, Intermediate Macroeconomics, Financial Econometrics, Advanced International Finance, Financial Market, Corporate Finance, International Bank Management, Calculus I, Calculus II (Multivariable Calculus), linear algebra, Public Finance(bilingual), Public Policy Analysis, Mathematical Modeling, Accounting, Money and Banking, Public Debt.</p>
 </li>
 </ul>
 <p>Bachelor of Science degree in Economics, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Jun.2008</p>
