--- a/index.html
+++ b/index.html
@@ -145,12 +145,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <p>Master of Science degree in Finance, Bachelor of Science degree in Economics, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Mar.2012</p>
 <ul>
-<li><p>Main Courses: Intermediate Microeconomics, Intermediate Macroeconomics, Financial Econometrics, Advanced International Finance, Financial Market, Corporate Finance, International Bank Management, Calculus I, Calculus II (Multivariable Calculus), linear algebra, Public Finance(bilingual), Public Policy Analysis, Mathematical Modeling, Accounting, Money and Banking, Public Debt.</p>
-</li>
-</ul>
-<p>Bachelor of Science degree in Economics, <a href="https://english.zufe.edu.cn/">Zhejiang University of Finance & Economics</a> (ZUFE), Jun.2008</p>
-<ul>
-<li><p>Main Courses: Calculus I, Calculus II (Multivariable Calculus), linear algebra, Microeconomics, Macroeconomics, Public Finance(bilingual), Public Policy Analysis, Mathematical Modeling, Accounting, Money and Banking, Public Debt, International Economics and Finance, Financial Management, Marketing, Tax Management.</p>
+<li><p>Main Courses: Intermediate Microeconomics, Intermediate Macroeconomics, Financial Econometrics, Advanced International Finance, Financial Market, Corporate Finance, International Bank Management, Calculus I, Calculus II (Multivariable Calculus), linear algebra, Public Finance(bilingual), Public Policy Analysis, Mathematical Modeling, Accounting, Money and Banking, Public Debt, Tax Management.</p>
 </li>
 </ul>
 <h2>Work experience</h2>
