--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 <p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan soon, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
 I am currently a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
 Being skilled at statistical techniques and data analytics, I focus on international comparison of <b>economic crisis</b>, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
-My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, consulting firm or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
+My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, NGO or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
 <p>My research interests include <b>Data Visualization</b>（R）and <b>Optimization</b>（Maple）with skillsets: </p>
 <ul>
@@ -54,11 +54,11 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Current work</h3>
 <ul>
-<li><p>Diary Study of Digital Financial Inclusion of Low-Income Households in Bangladesh (ADBI)</p>
+<li><p>Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia (Research Internship in ADBI)</p>
 </li>
 <li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy</p>
 </li>
-<li><p>Comparative Research on Economic Policies in Nazi Germany before WWII and Contemporary China</p>
+<li><p>The relationship between Policy Uncertainty and Private Investment and its Implications on US-China decoupling (Graduation Thesis)</p>
 </li>
 <li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act</p>
 </li>
