--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ I am currently a research intern at <b>Asian Development Bank Institute</b> in J
 Being skilled at statistical techniques and data analytics, I focus on <b>economic crisis</b>, particularly the undergoing economic downturn and pent-up political tension in China as well as their influence on the world. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, NGO or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include <b>Data Visualization</b>（R）and <b>Optimization</b>（Maple）with skillsets: </p>
+<p>My research interests include <b>Data Visualization in economics & finance</b>（R）and <b>Optimization for policy making</b>（Maple）with skillsets: </p>
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
@@ -49,7 +49,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Novice: Adobe Photoshop, Tableau, Stata. </p>
 </li>
-<li><p>Languages: English (Professional), Chinese (Native), Japanese (Elementary) </p>
+<li><p>Languages: English (Professional), Chinese (Traditional and Simplified - Native), Japanese (Elementary) </p>
 </li>
 </ul>
 <h3>Current work</h3>
@@ -63,16 +63,6 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act</p>
 </li>
 </ul>
-<h3>Skills & Languages</h3>
-<ol>
-<li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
-</li>
-<li><p>Proficient: Python, AMPL, SQL, Latex.</p>
-</li>
-<li><p>Novice: Adobe Photoshop, Tableau, Stata.</p>
-</li>
-<li><p>Proficient: English; Native: Chinese (Traditional and Simplified); Elementary: Japanese.</p>
-</ol>
 <h3>Papers & Publications </h3>
 <ol>
 <li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
