--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Papers & Publications </h3>
 <ol>
-<li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
+<li><p>Publication: Ye Qian, <b>Shen Wenying</b>. "Comparative research on causes of two debt crises in Latin America and Europe and their inspiration to China (拉美债务危机和欧洲债务危机成因的比较及其对我国的启示)". <i>Inquiry into Economic Issues</i> (CSSCI; national second level periodical). Oct. 2011, Page167-174. [<a href="pub/Debt Crisis.pdf">pdf</a>]</p>
 </li>
 <li><p>Graduate Degree Thesis: <b>Shen Wenying</b>, "The Relationship between Chinese fiscal deficit and current account: A research based on the vector auto-regression model", <i>outstanding thesis award</i>, Mar. 2012.[<a href="pub/Abstract.pdf">Abstract</a>][<a href="pub/Lab results.pdf">Lab results</a>]</p>
 </li>
