--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Evaluated and compared two types of money-laundering risk ranking workflows by constructing discrete-event simulation model with boundary constraints</p>
 </li>
-<li><p>Perform sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
+<li><p>Performed sensitivity analysis and obtained an optimized solution of the centralized workflow</p>
 </li>
-<li><p>Conduct the presentation showing policy implication - how closely the output matched the real world situations</p>
+<li><p>Conducted the presentation showing policy implication - how closely the output matched the real world situations</p>
 </li>  
 </ul>
 <li><p>Nonlinear Optimization: <b>Numerical optimization technique for constrained optimization: Penalty function combined with Newton’s method</b>, conducted independently, Mar.2021-May.2021. [<a href="pub/Penalty and Newton.pdf">pdf</a>][<a href="https://github.com/wshen01/wshen01.github.io/blob/main/code/Penalty and Newton.ipynb">Python code</a>]</p></li>
