--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h2>Work experience</h2>
 <ol>
-<li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Aug.2023-Present</p></li>
+<li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Jul.2023-Oct.2023</p></li>
 <ul>
 <li><p>Preprocessed the survey result dataset, checking the validity of data</p>
 </li>
