--- a/index.html
+++ b/index.html
@@ -142,15 +142,13 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ol>
 <li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Jul.2023-Oct.2023</p></li>
 <ul>
-<li><p>Preprocessed the survey result dataset, checking the validity of data</p>
+<li><p>Conducted data preprocessing, chart making, and regression analysis with R studio based on survey results</p>
 </li>
-<li><p>Created a new variable, income quartile, and produced charts using it to relate income with other variables</p>
+<li><p>Identified multicollinearity and interpreted drivers of Fintech use (e.g. payment apps usage, online shopping</p>
 </li>
-<li><p>Converted categorical variables into dummy ones, which was prepared for regression analysis</p>
+<li><p>Compared factors (e.g. age, gender, marital status, income, education) contributing to fintech use between Bangladesh and Indonesia</p>
 </li>
-<li><p>Did a correlation table for the independent variable to check and avoid multicollinearity issues</p>
-</li>
-<li><p>Estimated regressions, interpreted linear regression outputs and identified positive and negative drivers of fintech use</p>
+<li><p>Wrote a report named “Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia”</p>
 </li>
 </ul>
 <li><p>Teaching Assistant (part-time), Math department, College of William and Mary, Aug.2019-Jun.2021</p></li>
@@ -171,7 +169,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Conducted investigation into possible suspicious transactions and provided corresponding warnings to sub-branches</p>
 </li>
 </ul>
-<li><p>Risk Management Specialist (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2012-Dec.2015</p></li>
+<li><p>Risk Specialist (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2012-Dec.2015</p></li>
 <ul>
 <li><p>Helped design a visualization system to record and interpret operational risk indicators, e.g. Risk and Control Self-Assessment, Key Risk Indicator, and Loss Data Collection</p>
 </li>
