--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Languages: English (Professional), Chinese (Traditional and Simplified - Native), Japanese (Elementary) </p>
 </li>
 </ul>
-<h3>Current work</h3>
+<h3>Recent works</h3>
 <ul>
-<li><p>Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia (Research Internship in ADBI)</p>
+<li><p>Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia [<a href="certificate/Certificate_Wenying Shen.pdf">ADBI Certificate</a>]</p>
 </li>
 <li><p>The relationship between Policy Uncertainty and Private Investment and its Implications on US-China decoupling (Graduation Thesis)</p>
 </li>
