--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy</p>
 </li>
-<li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act [<a href="slides/Campus Security Act.pptx">pdf</a>]</p>
+<li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act [<a href="slides/Campus Security Act.pptx">Presentation</a>]</p>
 </li>
 </ul>
 <h3>Papers & Publications </h3>
