--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan soon, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
-I am currently a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
+Recently I completed a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
 Being skilled at statistical techniques and data analytics, I focus on <b>economic policy uncertainty</b>, its relationship with FDI divestment and its implications on US-China decoupling/derisking. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, NGO or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include <b>Data Visualization in economics & finance</b>（R）and <b>Optimization for policy making</b>（Maple）with skillsets: </p>
+<p>My research interests include <b>Econometric analysis and Data Analytics in economics & finance</b>（R）and <b>Optimization for policy making</b>（Maple）with skillsets: </p>
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
@@ -140,6 +140,13 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h2>Work experience</h2>
 <ol>
+<li><p>Program Facilitator, International University of Japan, October 2023</p></li>
+<ul>
+<li><p>Assisted welcome parties and other networking events with former and current students</p>
+</li>
+<li><p>Stimulated group and class discussions during lectures and helped students’ presentations</p>
+</li>
+</ul>  
 <li><p>Research Assistant (intern), Research Department, Asian Development Bank Institute, Jul.2023-Oct.2023</p></li>
 <ul>
 <li><p>Conducted data preprocessing, chart making, and regression analysis with R studio based on survey results</p>
@@ -158,24 +165,26 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Provide individual remote tutoring for undergraduate students with Calculus in Zoom on weekends</p>
 </li>
 </ul>
-<li><p>Regional Directorate (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2015-Jan.2019</p></li>
+<li><p>Regional Director (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2015-Jan.2019</p></li>
 <ul>
-<li><p>Prepared applicable documents and reports required for both internal audit and external regulation in terms of anti-money laundry management</p>
+<li><p>Supported overall AML strategies to meet PBC regulations and expectations, e.g. customer due diligence, investigation, monitoring, risk assessment and reporting</p>
 </li>
-<li><p>Monitored the performance of Anti-money Laundering Database, manage database configuration, and control database access permissions and privileges</p>
+<li><p>Controlled AML database access permissions and privileges, improved monitoring procedure, investigated into possible suspicious transactions, and prepared documentations for internal audit and external inquir</p>
 </li>
-<li><p>Improved the anti-money laundry system, set the criteria via queries to automatically detect redundancy transactions and the transactions incorrectly labeled as suspicious</p>
+<li><p>Collect on-site cases and enriched backlist for companies and individuals in accordance to latest sanctions</p>
 </li>
-<li><p>Conducted investigation into possible suspicious transactions and provided corresponding warnings to sub-branches</p>
+<li><p>Developed predictive strategies and implemented algorithms to detect high-risk transactions, providing corresponding warnings to sub-branches</p>
 </li>
 </ul>
 <li><p>Risk Specialist (full-time), Internal Control and Compliance Department, Huaxia Bank Co., Ltd., Dec.2012-Dec.2015</p></li>
 <ul>
+<li><p>Liaised between staff members, board members, and other involved stakeholders, and interpreted relevant regulatory news and updates on operational management</p>
+</li>
 <li><p>Helped design a visualization system to record and interpret operational risk indicators, e.g. Risk and Control Self-Assessment, Key Risk Indicator, and Loss Data Collection</p>
 </li>
 <li><p>Produced automated-reports that include data extract, manipulation, and chart generation within the Business Continuity and Disaster Recovery System</p>
 </li>
-<li><p>Offered periodic guidance on disaster avoidance measures, backup capabilities, and backup rotation and off-site storage procedures</p>
+<li><p>Designed training plans for employees to understand operational process, and offered periodic guidance on disaster avoidance measures, backup capabilities, and backup rotation and off-site storage procedures</p>
 </li>
 <li><p>Assisted in establishing Business Continuity and Disaster Recovery testing frameworks, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
 </li>
