--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h2>Work experience</h2>
 <ol>
-<li><p>Program Facilitator, International University of Japan, October 2023</p></li>
+<li><p>Program Facilitator (part-time), International University of Japan, October.2023</p></li>
 <ul>
 <li><p>Assisted welcome parties and other networking events with former and current students</p>
 </li>
@@ -187,6 +187,15 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Designed training plans for employees to understand operational process, and offered periodic guidance on disaster avoidance measures, backup capabilities, and backup rotation and off-site storage procedures</p>
 </li>
 <li><p>Assisted in establishing Business Continuity and Disaster Recovery testing frameworks, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
+</li>
+</ul>
+<li><p>Program Specialist (part-time), China Academy of Financial Research, Zhejiang University of Finance & Economics, Sep.2009-June.2012</p></li>
+<ul>
+<li><p>Provided administrative and operational functions, and promoted seminars, conferences, and other on-site events around the topic of public finance and public policy</p>
+</li>
+<li><p>Supporting research on comparison of sovereign debt across Europe and Latin America by data collection, information compiling, literature review, and regression analysis</p>
+</li>
+<li><p>	Cooperated with local regulation agencies like PRC and CBRC to review fiscal and monetary policies, e.g. checked “cyclical” and “non-cyclical or structural” effects on the government budget deficit and long-term fluctuations of current account, looked into two deficits issue (fiscal deficit and current account deficit)</p>
 </li>
 </ul>
 </ol>
