--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <td align="left"><p><b>Research Intern</b> <br />
 Research Department, Asian Development Bank Institute (ADBI) <br />
 Minamiuonuma（Remote), Japan <br /> 
-<b>Regional Directorate </b> <br />
+<b>Regional Director </b> <br />
 Internal Control and Compliance Department, Huaxia Bank Co., Ltd.<br />
 Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
