--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Supporting research on comparison of sovereign debt across Europe and Latin America by data collection, information compiling, literature review, and regression analysis</p>
 </li>
-<li><p>Cooperated with local regulation agencies like PRC and CBRC to review fiscal and monetary policies, e.g. checked “cyclical” and “non-cyclical or structural” effects on the government budget deficit and long-term fluctuations of current account, looked into two deficits issue (fiscal deficit and current account deficit)</p>
+<li><p>Cooperated with Public Finance and Administration Department to review public policies, e.g. arrangement of restrict traffic zone and primary education for children brought by their parents who move from rural areas to work in the city</p>
 </li>
 </ul>
 </ol>
