--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>Supporting research on comparison of sovereign debt across Europe and Latin America by data collection, information compiling, literature review, and regression analysis</p>
 </li>
-<li><p>Cooperated with Public Finance and Administration Department to review public policies, e.g. arrangement of restrict traffic zone and primary education for children brought by their parents who move from rural areas to work in the city</p>
+<li><p>Cooperated with Public Finance and Administration Department to review public policies, e.g. arrangement of restrict traffic zone, primary education for children brought by their parents who move from rural areas to work in the city</p>
 </li>
 </ul>
 </ol>
