--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <li><p>Assisted in establishing Business Continuity and Disaster Recovery testing frameworks, assigning the prioritization of systems, applications, functions, and services to ensure optimal recovery processes</p>
 </li>
 </ul>
-<li><p>Program Specialist (part-time), China Academy of Financial Research, Zhejiang University of Finance & Economics, Sep.2009-June.2012</p></li>
+<li><p>Program & Research Assistant (part-time), China Academy of Financial Research, Zhejiang University of Finance & Economics, Sep.2009-June.2012</p></li>
 <ul>
 <li><p>Provided administrative and operational functions, and promoted seminars, conferences, and other on-site events around the topic of public finance and public policy</p>
 </li>
