--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </li>
 <li><p>The relationship between Policy Uncertainty and Private Investment and its Implications on US-China decoupling (Graduation Thesis)</p>
 </li>
-<li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy</p>
+<li><p>Chinese Traditional Culture and its implications on Xi's National Security Strategy [<a href="pub/Xi National Security Strategy.pdf">pdf</a>]</p>
 </li>
 <li><p>Don’t drive smart students away from the US: lobbying for adjustment of Secure Campus Act [<a href="slides/Campus Security Act.pdf">Presentation</a>]</p>
 </li>
