--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
-<li><p>Proficient: Python, AMPL, SQL, Latex. </p>
+<li><p>Proficient: Python, SPSS, SQL, Tableau. </p>
 </li>
-<li><p>Novice: Adobe Photoshop, Tableau, Stata. </p>
+<li><p>Novice: Adobe Photoshop, Latex, Stata. </p>
 </li>
 <li><p>Languages: English (Professional), Chinese (Traditional and Simplified - Native), Japanese (Elementary) </p>
 </li>
