--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan soon, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
-Recently I completed a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b>. <br />
-Being skilled at statistical techniques and data analytics, I focus on <b>economic policy uncertainty</b>, its relationship with FDI divestment and its implications on US-China decoupling/derisking. <br />
+Recently I completed a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b> and work for China Academy of Financial Research (an affiliation institution of ZUFE) as a reasearch & program specialist. <br />
+Currently I focus on <b>economic policy uncertainty</b>, its relationship with FDI divestment and its implications on US-China decoupling/derisking. Thanks to my technical and analytical capabilities, I am also interested in the effects of digital financial literacy on Fintech use and financial behaviors across gender categories, income scale and education level. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, NGO or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
-<p>My research interests include <b>Econometric analysis and Data Analytics in economics & finance</b>（R）and <b>Optimization for policy making</b>（Maple）with skillsets: </p>
+<p>My research interests include <b>Econometric analysis and Data Analytics in economics & finance</b>（R）and <b>Survey Analysis</b>（SPSS）with skillsets: </p>
 <ul>
 <li><p>Expert: Linux, R, Arena, Maple, MS Office Suite, Google Workplace. </p>
 </li>
