--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@ Zhejiang, China<br />
 E-mail: <a href="mailto:wenying@iuj.ac.jp">wenying@iuj.ac.jp</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan soon, following the first one at the <b>Finance Department</b> at Zhejiang Univeristy of Finance and Economics in China and the second one at the <b>Math Department</b> in College of William and Mary in the U.S. <br />
-Recently I completed a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b> and work for China Academy of Financial Research (an affiliation institution of ZUFE) as a reasearch & program specialist. <br />
-Currently I focus on <b>economic policy uncertainty</b>, its relationship with FDI divestment and its implications on US-China decoupling/derisking. Thanks to my technical and analytical capabilities, I am also interested in the effects of digital financial literacy on Fintech use and financial behaviors across gender categories, income scale and education level. <br />
+<p>I will obtain my third master’s degree in <b>Political Science</b> at the International University of Japan soon, following the first Master of <b>Finance</b> at Zhejiang Univeristy of Finance and Economics in China and the second Master of <b>Computer Science</b> in College of William and Mary in the U.S. <br /> Last October I completed a research intern at <b>Asian Development Bank Institute</b> in Japan. I used to serve as a regional director at Huaxia Bank in charge of <b>Anti Money Laundering & Countering Terrorism Financing</b> and work for China Academy of Financial Research (an affiliation institution of ZUFE) as a reasearch & program specialist. <br />
+Currently I focus on <b>economic policy uncertainty</b>, FDI divestment and its implications on US-China decoupling. Thanks to my technical and analytical capabilities, I am also interested in effects of digital financial literacy on Fintech use and financial behaviors across gender categories, income scales and education levels. <br />
 My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think tank, NGO or international organization. Also, I am fascinated with Chinese traditional culture and history. </p>
 <h2>Research</h2>
 <p>My research interests include <b>Econometric analysis and Data Analytics in economics & finance</b>（R）and <b>Survey Analysis</b>（SPSS）with skillsets: </p>
@@ -54,6 +53,8 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Recent works</h3>
 <ul>
+<li><p>The Effect of Digital Financial Literacy on Usage of Mobile Payment Apps in Bangladesh and its Variation across Age and Gender [<a href="certificate/Certificate_Wenying Shen.pdf">pdf</a>]</p>
+</li>
 <li><p>Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia [<a href="certificate/Certificate_Wenying Shen.pdf">ADBI Certificate</a>]</p>
 </li>
 <li><p>The relationship between Policy Uncertainty and Private Investment and its Implications on US-China decoupling (Graduation Thesis)</p>
