--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ My dream positions include <b>Data Analyst</b> and <b>Researcher</b> in a think 
 </ul>
 <h3>Recent works</h3>
 <ul>
-<li><p>The Effect of Digital Financial Literacy on Usage of Mobile Payment Apps in Bangladesh and its Variation across Age and Gender [<a href="certificate/Certificate_Wenying Shen.pdf">pdf</a>]</p>
+<li><p>The Effect of Digital Financial Literacy on Usage of Mobile Payment Apps in Bangladesh and its Variation across Age and Gender [<a href="pub/DFL in Bangladesh.pdf">pdf</a>]</p>
 </li>
 <li><p>Factors Affecting Fintech Use of Low-income Households in Bangladesh and Indonesia [<a href="certificate/Certificate_Wenying Shen.pdf">ADBI Certificate</a>]</p>
 </li>
